--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,23 @@
 .read-the-docs {
   color: #888;
 }
+
+.animate-scroll:hover {
+  animation-play-state: paused;
+}
+
+body.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.modal-container::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari and Opera */
+}
